# mars-landing-socp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
MarsLanding/: .gitignore  CRM2CCM.c  MarsLanding.c  MarsLanding.h  MarsLandingAuto.c  MarsLandingAutoData.h  check_model_consistency.py  mars_acados.py  mars_codegen.py  mars_model.py  mars_params.py  mars_robustness.py  mars_solve.py
MarsLanding/tests/: test_params.py
benchmarks/: clarabel_float_bench.c  clarabel_mars.c
ci/: validate.sh
docs/: debugging-methodology.md  ecos-soc-convention.md  ipopt-cross-validation.md
docs/evidence/: stage-a-audit.md
docs/provenance/: handwritten-matrix.md
docs/superpowers/plans/: 2026-07-13-consistency-repair.md  2026-07-13-stage-a-evidence-baseline.md  2026-07-13-stage-b1-free-time-mesh.md
docs/superpowers/specs/: 2026-07-13-consistency-repair-design.md  2026-07-13-stage-b1-free-time-mesh-design.md  2026-07-13-stage-b2-embedded-evidence-design.md  2026-07-13-stage-b3-closed-loop-safety-design.md  2026-07-13-top-tier-research-engineering-design.md
ecos/include/: cone.h  ecos.h  glblopts.h
ecos/src/: cone.c  ecos.c  equil.c  kkt.c  preproc.c
experiments/: aggregate_free_time_mesh.py  aggregate_results.py  benchmark_host.py  benchmark_protocol.json  contracts.py  ecos_adapter.py  free_time_search.py  physical_model.py  run_free_time_mesh.py  run_monte_carlo.py  scenario_loader.py  solution_audit.py  study_contracts.py
experiments/results/: free_time_mesh_v1.jsonl  free_time_mesh_v1.summary.json  near_nominal_v1.jsonl  near_nominal_v1.summary.json
experiments/scenarios/: near_nominal_v1.json
experiments/studies/: free_time_mesh_v1.json
paper/: extract_trajectory.py  mars_landing_socp.bbl  mars_landing_socp.tex  refs.bib  refs_mission.bib
paper/chapters/: ch1_intro.tex  ch2_formulation.tex  ch3_convexification.tex  ch4_sparse_ecos.tex  ch5_results.tex  ch6_embedded.tex  ch7_conclusion.tex
paper/data/: solver_comparison.json  trajectory.json
paper/evidence/: __init__.py  c_native_nominal.json  check_claims.py  claims.json  n150_solve_report.json  nominal_solution_audit.json
paper/figures/: generate_all.py
research/: __init__.py
research/literature/: __init__.py  check_literature.py  literature_matrix.csv  review_protocol.md  stage_b1_method_review.md
tests/: test_aggregate_results.py  test_benchmark_protocol.py  test_ci_contract.py  test_claim_ledger.py  test_experiment_contracts.py  test_free_time_search.py  test_handwritten_asset.py  test_literature_matrix.py  test_monte_carlo_runner.py  test_physical_model.py  test_scenario_loader.py  test_solution_audit.py  test_study_contracts.py
